--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "^8.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-flatpickr": "^3.10.7",
     "react-helmet-async": "^1.2.2",
     "react-redux": "^7.2.6",
