--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.2",
     "connected-react-router": "^6.9.2",
     "firebase": "^9.6.6",
+    "flowbite": "^1.4.1",
     "history": "^5.2.0",
     "postcss": "^8.4.6",
     "react": "^17.0.2",
