--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext ts,tsx,js,jsx --no-error-on-unmatched-pattern",
-    "lint:fix": "eslint . --ext ts,tsx,js,jsx --no-error-on-unmatched-pattern --fix"
+    "lint:fix": "eslint . --ext ts,tsx,js,jsx --no-error-on-unmatched-pattern --fix",
+    "deploy": "yarn build && firebase deploy --only hosting"
   },
   "eslintConfig": {
     "extends": [
